# mailing-service

./: README.md  pyproject.toml
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
config/: settings.py  urls.py
fixtures/: auth_groups.json  blog_list.json  clients_list.json  mailingmessage_list.json  mailingsettings_list.json  users_list.json
mailing/: admin.py  forms.py  models.py  urls.py  views.py
mailing/management/commands/: mt.py  send_mail.py
mailing/migrations/: 0001_initial.py  0002_initial.py  0003_alter_client_options_alter_mailingmessage_options_and_more.py  0004_alter_mailingsettings_end_time_and_more.py
mailing/services/: serv_send_mail.py
mailing/templates/mailing/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  contacts.html  mailingmessage_confirm_delete.html  mailingmessage_detail.html  mailingmessage_form.html  mailingmessage_list.html  mailingsettings_confirm_delete.html  mailingsettings_detail.html  mailingsettings_form.html  mailingsettings_list.html  start_page.html
mailing/templates/mailing/includes/: inc_main_menu.html
users/: forms.py  models.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  password_reset_done.html  password_reset_form.html  register.html  user_form.html
