[tool.poetry]
name = "mailing service"
version = "0.1.0"
description = ""
authors = ["air <talko.alexander@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.13"
pillow = "^10.4.0"
ipython = "^8.26.0"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
pytils = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
